--- a/sito_modificato/loan-amortization.html
+++ b/sito_modificato/loan-amortization.html
@@ -190,7 +190,51 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+    <div class="mt-5">
+              <div class="flex flex-wrap items-center gap-3 mb-2">
+                <label for="viewMode" class="text-sm text-gray-700">View:</label>
+                <select id="viewMode" class="px-3 py-2 border border-gray-300 rounded-md">
+                  <option value="detailed" selected="">Detailed (per period)</option>
+                  <option value="yearly">Yearly summary</option>
+                </select>
+
+                <label for="rowsPerPage" class="text-sm text-gray-700 ml-auto">Rows / page:</label>
+                <select id="rowsPerPage" class="px-3 py-2 border border-gray-300 rounded-md">
+                  <option>12</option><option selected="">24</option><option>60</option><option>120</option>
+                </select>
+              </div>
+
+              <div class="rounded-lg border border-blue-100 bg-white overflow-auto max-h-[480px]">
+                <div id="scheduleWrap" class="tableWrap"><table role="table" aria-describedby="scheduleCaption">
+                  <caption id="scheduleCaption" class="text-sm">Each row shows how your payment is split across interest and principal, extras, PMI/escrow, and the remaining balance.</caption>
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Date</th>
+                      <th scope="col">Payment</th>
+                      <th scope="col">Interest</th>
+                      <th scope="col">Principal</th>
+                      <th scope="col">Extra</th>
+                      <th scope="col">PMI</th>
+                      <th scope="col">Escrow</th>
+                      <th scope="col">All-in</th>
+                      <th scope="col">Balance</th>
+                    </tr>
+                  </thead>
+                  <tbody id="scheduleBody" aria-live="polite"></tbody>
+                </table></div>
+              </div>
+
+              <div class="flex items-center justify-between mt-2">
+                <div class="flex gap-2">
+                  <button id="prevPage" class="px-3 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">Prev</button>
+                  <button id="nextPage" class="px-3 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">Next</button>
+                </div>
+                <div id="pageInfo" class="text-sm text-gray-600">Page — of —</div>
+              </div>
+            </div>
+
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -384,49 +428,7 @@
             <p class="text-xs text-gray-600 mt-2">* All-in includes escrow (tax + insurance) and PMI while applicable.</p>
 
             <!-- Schedule -->
-            <div class="mt-5">
-              <div class="flex flex-wrap items-center gap-3 mb-2">
-                <label for="viewMode" class="text-sm text-gray-700">View:</label>
-                <select id="viewMode" class="px-3 py-2 border border-gray-300 rounded-md">
-                  <option value="detailed" selected="">Detailed (per period)</option>
-                  <option value="yearly">Yearly summary</option>
-                </select>
-
-                <label for="rowsPerPage" class="text-sm text-gray-700 ml-auto">Rows / page:</label>
-                <select id="rowsPerPage" class="px-3 py-2 border border-gray-300 rounded-md">
-                  <option>12</option><option selected="">24</option><option>60</option><option>120</option>
-                </select>
-              </div>
-
-              <div class="rounded-lg border border-blue-100 bg-white overflow-auto max-h-[480px]">
-                <div id="scheduleWrap" class="tableWrap"><table role="table" aria-describedby="scheduleCaption">
-                  <caption id="scheduleCaption" class="text-sm">Each row shows how your payment is split across interest and principal, extras, PMI/escrow, and the remaining balance.</caption>
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Date</th>
-                      <th scope="col">Payment</th>
-                      <th scope="col">Interest</th>
-                      <th scope="col">Principal</th>
-                      <th scope="col">Extra</th>
-                      <th scope="col">PMI</th>
-                      <th scope="col">Escrow</th>
-                      <th scope="col">All-in</th>
-                      <th scope="col">Balance</th>
-                    </tr>
-                  </thead>
-                  <tbody id="scheduleBody" aria-live="polite"></tbody>
-                </table></div>
-              </div>
-
-              <div class="flex items-center justify-between mt-2">
-                <div class="flex gap-2">
-                  <button id="prevPage" class="px-3 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">Prev</button>
-                  <button id="nextPage" class="px-3 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">Next</button>
-                </div>
-                <div id="pageInfo" class="text-sm text-gray-600">Page — of —</div>
-              </div>
-            </div>
+            
           </div>
         </section>
 
@@ -905,7 +907,7 @@
                       <th scope="col">Balance</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody" aria-live="polite"></tbody>
+                  <tbody id="scheduleBodyAlt1" aria-live="polite"></tbody>
                 </table>
               </div>
 
@@ -1393,7 +1395,7 @@
                       <th scope="col">Balance</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody" aria-live="polite"></tbody>
+                  <tbody id="scheduleBodyAlt2" aria-live="polite"></tbody>
                 </table>
               </div>
 
