--- a/sito_modificato/loan-comparison-calculator.html
+++ b/sito_modificato/loan-comparison-calculator.html
@@ -1043,7 +1043,7 @@
                       <th class="px-4 py-2">Cum. Cost</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody"></tbody>
+                  <tbody id="scheduleBodyAlt1"></tbody>
                 </table>
               </div>
             </details>
@@ -1592,7 +1592,7 @@
                       <th class="px-4 py-2">Cum. Cost</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody"></tbody>
+                  <tbody id="scheduleBodyAlt2"></tbody>
                 </table>
               </div>
             </details>
