--- a/sito_modificato/loan-payoff.html
+++ b/sito_modificato/loan-payoff.html
@@ -218,7 +218,36 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+    <section class="mt-8">
+            <div class="flex items-center justify-between mb-3">
+              <h2 class="text-xl font-semibold text-gray-800">Amortization schedule</h2>
+              <button id="toggleSchedule" type="button" class="text-sm font-semibold text-blue-600 hover:text-blue-700">
+                Show full schedule
+              </button>
+            </div>
+            <div class="overflow-auto border border-gray-200 rounded-lg">
+              <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm">
+                <caption class="sr-only">Loan payoff schedule including extra payments and lump sum</caption>
+                <thead class="bg-slate-100 text-gray-700">
+                  <tr>
+                    <th class="py-2 px-3 text-left font-semibold">#</th>
+                    <th class="py-2 px-3 text-right font-semibold">Payment</th>
+                    <th class="py-2 px-3 text-right font-semibold">Interest</th>
+                    <th class="py-2 px-3 text-right font-semibold">Principal</th>
+                    <th class="py-2 px-3 text-right font-semibold">Extra</th>
+                    <th class="py-2 px-3 text-right font-semibold">Balance</th>
+                  </tr>
+                </thead>
+                <tbody id="scheduleBody">
+                  <tr>
+                    <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
+                  </tr>
+                </tbody>
+              </table></div>
+            </div>
+          </section>
+
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -381,34 +410,7 @@
             </div>
           </div>
 
-          <section class="mt-8">
-            <div class="flex items-center justify-between mb-3">
-              <h2 class="text-xl font-semibold text-gray-800">Amortization schedule</h2>
-              <button id="toggleSchedule" type="button" class="text-sm font-semibold text-blue-600 hover:text-blue-700">
-                Show full schedule
-              </button>
-            </div>
-            <div class="overflow-auto border border-gray-200 rounded-lg">
-              <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm">
-                <caption class="sr-only">Loan payoff schedule including extra payments and lump sum</caption>
-                <thead class="bg-slate-100 text-gray-700">
-                  <tr>
-                    <th class="py-2 px-3 text-left font-semibold">#</th>
-                    <th class="py-2 px-3 text-right font-semibold">Payment</th>
-                    <th class="py-2 px-3 text-right font-semibold">Interest</th>
-                    <th class="py-2 px-3 text-right font-semibold">Principal</th>
-                    <th class="py-2 px-3 text-right font-semibold">Extra</th>
-                    <th class="py-2 px-3 text-right font-semibold">Balance</th>
-                  </tr>
-                </thead>
-                <tbody id="scheduleBody">
-                  <tr>
-                    <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
-                  </tr>
-                </tbody>
-              </table></div>
-            </div>
-          </section>
+          
         </section>
 
         <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
@@ -806,7 +808,7 @@
                     <th class="py-2 px-3 text-right font-semibold">Balance</th>
                   </tr>
                 </thead>
-                <tbody id="scheduleBody">
+                <tbody id="scheduleBodyAlt1">
                   <tr>
                     <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
                   </tr>
@@ -1209,7 +1211,7 @@
                     <th class="py-2 px-3 text-right font-semibold">Balance</th>
                   </tr>
                 </thead>
-                <tbody id="scheduleBody">
+                <tbody id="scheduleBodyAlt2">
                   <tr>
                     <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
                   </tr>
