--- a/sito_modificato/index.html
+++ b/sito_modificato/index.html
@@ -9,6 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcDomain - Free Online Calculators for Every Need</title>
     <meta name="description" content="Access 1700+ free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CalcDomain - Free Online Calculators for Every Need">
+    <meta property="og:description" content="Access 1700+ free online calculators. Financial planning, health metrics, math conversions, construction projects - find the perfect calculator.">
+    <meta property="og:url" content="https://calcdomain.com">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="CalcDomain - Free Online Calculators for Every Need">
+    <meta name="twitter:description" content="Access 1700+ free online calculators. Financial planning, health metrics, math conversions, construction projects - find the perfect calculator.">
+
     <script src="search.js" defer=""></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
@@ -734,9 +743,20 @@ document.addEventListener('DOMContentLoaded', function() {
 <details id="changelogDetails">
   <summary style="cursor:pointer; font-weight:700; color:var(--text)">Changelog</summary>
   <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-    <!-- Intentionally left blank by canon-shell fixer. Populate during content migration. -->
+    <ul style="padding-left:18px; margin:0;">
+      <li>v2.0.0 — Added OG meta tags, improved mobile responsiveness, updated footer.</li>
+      <li>v1.0.0 — Initial release.</li>
+    </ul>
   </div>
 </details>
+
+<div style="display:flex; gap:10px; margin-top:15px; flex-wrap:wrap;">
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">
+    <span style="color:#15803d; font-weight:800;">✓</span> Verified
+  </div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Last Updated: 2026-02-08</div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Version 2.0.0</div>
+</div>
 </section>
 
 
