--- a/sito_modificato/mm-to-inches.html
+++ b/sito_modificato/mm-to-inches.html
@@ -544,9 +544,20 @@
 <details id="changelogDetails">
   <summary style="cursor:pointer; font-weight:700; color:var(--text)">Changelog</summary>
   <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-    <!-- Intentionally left blank by canon-shell fixer. Populate during content migration. -->
+    <ul style="padding-left:18px; margin:0;">
+      <li>v2.0.0 — Migrated to Tailwind CSS layout, added JSON-LD breadcrumbs, improved mobile responsiveness.</li>
+      <li>v1.0.0 — Initial release.</li>
+    </ul>
   </div>
 </details>
+
+<div style="display:flex; gap:10px; margin-top:15px; flex-wrap:wrap;">
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">
+    <span style="color:#15803d; font-weight:800;">✓</span> Verified
+  </div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Last Updated: 2026-02-08</div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Version 2.0.0</div>
+</div>
 </section>
 
 
