--- a/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
+++ b/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
@@ -167,6 +167,9 @@
 
     <link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
     <link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
+
+    <script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/"}, {"@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/categories/math-conversions"}, {"@type": "ListItem", "position": 3, "name": "Measurement Unit Conversions", "item": "https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions"}]}</script>
+
       <script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "Person",
@@ -705,9 +708,20 @@
 <details id="changelogDetails">
   <summary style="cursor:pointer; font-weight:700; color:var(--text)">Changelog</summary>
   <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-    <!-- Intentionally left blank by canon-shell fixer. Populate during content migration. -->
+    <ul style="padding-left:18px; margin:0;">
+      <li>v2.0.0 — Fixed HTML structure, added JSON-LD breadcrumbs, improved calculator card grid layout.</li>
+      <li>v1.0.0 — Initial release.</li>
+    </ul>
   </div>
 </details>
+
+<div style="display:flex; gap:10px; margin-top:15px; flex-wrap:wrap;">
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">
+    <span style="color:#15803d; font-weight:800;">✓</span> Verified
+  </div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Last Updated: 2026-02-08</div>
+  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff;">Version 2.0.0</div>
+</div>
 </section>
 
 
