--- a/sito_modificato/mortgage-payment.html
+++ b/sito_modificato/mortgage-payment.html
@@ -351,6 +351,47 @@
               </div>
             </section>
 
+            <!-- Meta Section: Formulas, Citations, Changelog, Verification -->
+            <section class="mt-10 meta-section" id="pageMeta" aria-label="Verification, changelog, formulas, citations">
+              <details id="formulaDetails">
+                <summary class="cursor-pointer font-bold text-gray-800">Formulas</summary>
+                <div class="mt-3 p-3 bg-white border border-gray-200 rounded-lg text-sm">
+                  <p><strong>Fixed-Rate Amortization (principal and interest):</strong></p>
+                  <p class="font-mono mt-2">M = P × [r(1+r)ⁿ] / [(1+r)ⁿ - 1]</p>
+                  <ul class="list-disc list-inside mt-2 text-gray-600">
+                    <li>P: Principal (loan amount)</li>
+                    <li>r: Periodic interest rate (annual rate / payments per year)</li>
+                    <li>n: Total number of payments (term in years × payments per year)</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="mt-3" id="citationDetails">
+                <summary class="cursor-pointer font-bold text-gray-800">Citations</summary>
+                <div class="mt-3 p-3 bg-white border border-gray-200 rounded-lg text-sm">
+                  <p>CFPB explainer: <a href="https://www.consumerfinance.gov/ask-cfpb/how-is-a-mortgage-payment-calculated-en-1907/" target="_blank" rel="noopener" class="text-blue-600 hover:underline">Mortgage payment calculation</a></p>
+                </div>
+              </details>
+
+              <details class="mt-3" id="changelogDetails">
+                <summary class="cursor-pointer font-bold text-gray-800">Changelog</summary>
+                <div class="mt-3 p-3 bg-white border border-gray-200 rounded-lg text-sm">
+                  <ul class="list-disc list-inside">
+                    <li>v2.0.0 — Migrated to Tailwind CSS layout, added breadcrumbs, JSON-LD schema, improved mobile responsiveness.</li>
+                    <li>v1.0.0 — Initial release.</li>
+                  </ul>
+                </div>
+              </details>
+
+              <div class="flex gap-2 mt-4 flex-wrap">
+                <span class="inline-flex items-center gap-1 border border-gray-200 px-3 py-1 rounded-full bg-white text-sm">
+                  <span class="text-green-600 font-bold">✓</span> Verified by Ugo Candido
+                </span>
+                <span class="inline-flex items-center border border-gray-200 px-3 py-1 rounded-full bg-white text-sm">Last Updated: 2026-02-08</span>
+                <span class="inline-flex items-center border border-gray-200 px-3 py-1 rounded-full bg-white text-sm">Version 2.0.0</span>
+              </div>
+            </section>
+
 </main>
 
         <aside class="w-full lg:w-1/3">
@@ -729,51 +770,4 @@
 })();
 </script>
 
-<section class="meta-section" id="pageMeta" aria-label="Verification, changelog, formulas, citations" style="max-width: 1120px; margin: 40px auto 0; padding: 20px; border-top: 1px solid #e5e7eb; font-size: 13px; color: #6b7280;">
-<details id="formulaDetails">
-  <summary style="cursor:pointer; font-weight:700; color:#111827">Formulas</summary>
-  <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid #e5e7eb; border-radius:8px;">
-    <p><strong>Fixed-Rate Amortization (principal &amp; interest):</strong></p>
-    <p>M = P × [r(1+r)ⁿ] / [(1+r)ⁿ - 1]</p>
-    <ul style="padding-left:18px; margin-top:8px;">
-      <li>P: Principal (loan amount)</li>
-      <li>r: Periodic interest rate (annual rate / payments per year)</li>
-      <li>n: Total number of payments (term in years × payments per year)</li>
-    </ul>
-  </div>
-</details>
-
-<details id="citationDetails" style="margin-top:10px;">
-  <summary style="cursor:pointer; font-weight:700; color:#111827">Citations</summary>
-  <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid #e5e7eb; border-radius:8px;">
-    <p style="margin:0;">
-      CFPB explainer: <a href="https://www.consumerfinance.gov/ask-cfpb/how-is-a-mortgage-payment-calculated-en-1907/" target="_blank" rel="noopener">Mortgage payment calculation</a>
-    </p>
-  </div>
-</details>
-
-<details id="changelogDetails" style="margin-top:10px;">
-  <summary style="cursor:pointer; font-weight:700; color:#111827">Changelog</summary>
-  <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid #e5e7eb; border-radius:8px;">
-    <ul style="padding-left:18px; margin:0;">
-      <li>v2.0.0 — Migrated to Tailwind CSS layout, added breadcrumbs, JSON-LD schema, improved mobile responsiveness.</li>
-      <li>v1.0.0 — Initial release.</li>
-    </ul>
-  </div>
-</details>
-
-<div style="display:flex; gap:10px; margin-top:15px; flex-wrap:wrap;">
-  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid #e5e7eb; padding:4px 10px; border-radius:20px; background:#fff;">
-    <span style="color:#15803d; font-weight:800;">✓</span> Verified by Ugo Candido
-  </div>
-  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid #e5e7eb; padding:4px 10px; border-radius:20px; background:#fff;">Last Updated: 2026-02-08</div>
-  <div style="display:inline-flex; align-items:center; gap:6px; border:1px solid #e5e7eb; padding:4px 10px; border-radius:20px; background:#fff;">Version 2.0.0</div>
-</div>
-</section>
-
-<script>
-  (function() {
-    'use strict';
-  })();
-</script>
 </body></html>
