--- a/sito_modificato/personal-loan-calculator.html
+++ b/sito_modificato/personal-loan-calculator.html
@@ -870,7 +870,7 @@
                             <div class="mt-6 table-container" id="scheduleContainer">
                                 <table>
                                     <thead><tr><th>#</th><th>Date</th><th>Payment</th><th>Interest</th><th>Principal</th><th>Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt1"></tbody>
                                 </table>
                             </div>
                         </details>
@@ -1275,7 +1275,7 @@
                             <div class="mt-6 table-container" id="scheduleContainer">
                                 <table>
                                     <thead><tr><th>#</th><th>Date</th><th>Payment</th><th>Interest</th><th>Principal</th><th>Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt2"></tbody>
                                 </table>
                             </div>
                         </details>
