--- a/sito_modificato/student-loan-calculator.html
+++ b/sito_modificato/student-loan-calculator.html
@@ -740,7 +740,7 @@
                             <div class="mt-4 schedule-container">
                                 <table class="w-full text-sm">
                                     <thead><tr class="bg-gray-50"><th class="text-left p-2">Month</th><th class="text-right p-2">Payment</th><th class="text-right p-2">Interest</th><th class="text-right p-2">Principal</th><th class="text-right p-2">Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt1"></tbody>
                                 </table>
                             </div>
                         </details>
@@ -1062,7 +1062,7 @@
                             <div class="mt-4 schedule-container">
                                 <table class="w-full text-sm">
                                     <thead><tr class="bg-gray-50"><th class="text-left p-2">Month</th><th class="text-right p-2">Payment</th><th class="text-right p-2">Interest</th><th class="text-right p-2">Principal</th><th class="text-right p-2">Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt2"></tbody>
                                 </table>
                             </div>
                         </details>
