--- a/sito_modificato/student-loan.html
+++ b/sito_modificato/student-loan.html
@@ -874,7 +874,7 @@
 <th>Balance</th>
 </tr>
 </thead>
-<tbody id="scheduleBody">
+<tbody id="scheduleBodyAlt1">
 <tr><td colspan="5">Enter your details to see the schedule.</td></tr>
 </tbody>
 </table>
@@ -1253,7 +1253,7 @@
 <th>Balance</th>
 </tr>
 </thead>
-<tbody id="scheduleBody">
+<tbody id="scheduleBodyAlt2">
 <tr><td colspan="5">Enter your details to see the schedule.</td></tr>
 </tbody>
 </table>
