--- a/sito_modificato/title-loan-calculator.html
+++ b/sito_modificato/title-loan-calculator.html
@@ -932,7 +932,7 @@
                       <th class="px-4 py-2">Balance</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody"></tbody>
+                  <tbody id="scheduleBodyAlt1"></tbody>
                 </table>
               </div>
             </details>
@@ -1414,7 +1414,7 @@
                       <th class="px-4 py-2">Balance</th>
                     </tr>
                   </thead>
-                  <tbody id="scheduleBody"></tbody>
+                  <tbody id="scheduleBodyAlt2"></tbody>
                 </table>
               </div>
             </details>
