--- a/sito_modificato/simple-loan.html
+++ b/sito_modificato/simple-loan.html
@@ -818,7 +818,7 @@
                     <th class="py-2 px-3 text-right font-semibold">Balance</th>
                   </tr>
                 </thead>
-                <tbody id="scheduleBody">
+                <tbody id="scheduleBodyAlt1">
                   <tr>
                     <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
                   </tr>
@@ -1221,7 +1221,7 @@
                     <th class="py-2 px-3 text-right font-semibold">Balance</th>
                   </tr>
                 </thead>
-                <tbody id="scheduleBody">
+                <tbody id="scheduleBodyAlt2">
                   <tr>
                     <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
                   </tr>
