--- a/sito_modificato/mortgage-payment.html
+++ b/sito_modificato/mortgage-payment.html
@@ -298,8 +298,8 @@
                 </p>
               </div>
             </section>
-
-           
+ 
+          </section>
 
           <section class="card meta-section space-y-4" id="pageMeta" aria-label="Verification, changelog, formulas, citations">
             <details id="formulaDetails">
